src/features/Projects/Projects.css
.projects-container {
    padding-top: 100px;
    padding-bottom: 100px;
    min-height: auto;
}

.projects-header {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.projects-title {
    font-family: var(--font-titles);
    font-size: var(--size-titles);
}

.projects-description {
    margin: 1rem 0;
    text-align: center;
    font-family: var(--font-text);
    font-size: var(--size-text);
}

.projects-cards {
    width: 100%;
    display: grid;
    gap: 2rem;
    margin-top: 3rem;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
}

.projects-card {
    border: 1px solid var(--text-color);
    overflow: hidden;
    transition: transform 0.3s ease;
}

.projects-card:hover {
    transform: translateY(-15px);
}

.projects-card-image {
    height: 200px;
    overflow: hidden;
    position: relative;
}

.projects-card-img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    transition: transform 0.3s ease;
}

.projects-card-img:hover {
    transform: scale(1.05);
}

.projects-card-text {
    padding: 1.5rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 20px;
    text-align: center;
}

.projects-card-title {
    font-family: var(--font-titles);
    font-size: 1.5rem;
    margin-bottom: 0.75rem;
    color: var(--text-color);
}

.projects-card-description {
    font-family: var(--font-text);
    color: var(--text-color);
    margin-bottom: 1.25rem;
    line-height: 1.6;
}

